challenge-3/mysql-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-network-policy
  labels:
    app: mysql
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - "Ingress"
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: mysql-client
